--- a/BotActivation.html
+++ b/BotActivation.html
@@ -16,6 +16,6 @@
       </form>
     </div>
     <script src="LoginUsers.js"></script>
-    <script src="RedeemKey.js.js"></script>
+    <script src="RedeemKey.js"></script>
   </body>
 </html>
